--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
-fastapi = "*"
 uvicorn = {extras = ["standard"],version = "*"}
+fastapi = "*"
 
 [requires]
 python_version = "3.7"
