--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pipenv
+        python -m pip install pyenv flake8 pytest pipenv 
         if [ -f Pipfile ]; then pipenv install ; fi
     - name: Lint with flake8
       run: |
