--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,9 +23,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
- #   - name: Install dependencies
-  #    run: |
-   #     python -m pip install --upgrade pip
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
   #      python -m pip install pyenv flake8 pytest pipenv 
   #      if [ -f Pipfile ]; then pipenv install ; fi
   #  - name: Lint with flake8
