--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pyenv flake8 pytest pipenv 
-        if [ -f Pipfile ]; then pipenv install ; fi
+  #      if [ -f Pipfile ]; then pipenv install ; fi
   #  - name: Lint with flake8
   #    run: |
   #      # stop the build if there are Python syntax errors or undefined names
