--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pipenv 
-        if [ -f Pipfile ]; then pipenv install ; fi
+        if [ -f Pipfile ]; then pipenv install --deploy; fi
         pipenv shell
     - name: Lint with flake8
       run: |
