--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,9 +23,22 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pipenv 
+        python -m pip install pipenv
+        python -m pip install --upgrade pipenv wheel 
         if [ -f Pipfile ]; then pipenv install --deploy; fi
         pipenv shell
+
+    - id: cache-pipenv
+      uses: actions/cache@v1
+      with:
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+    
+    - name: Install dependencies
+      if: steps.cache-pipenv.outputs.cache-hit != 'true'
+      run: |
+        pipenv install --deploy --dev
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
