--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install pipenv
         python -m pip install --upgrade pipenv wheel 
         if [ -f Pipfile ]; then pipenv install --deploy; fi
-        pipenv shell
+        
 
     - id: cache-pipenv
       uses: actions/cache@v1
@@ -48,3 +48,8 @@ jobs:
     - name: Test with pytest
       run: |
         pipenv run pytest
+
+    - name: Run type checking
+      run: |
+        npm install -g pyright
+        pipenv run typecheck
