refactor to put everything in src

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 pytest-cov = "*"
 pytest = "*"
 flake8 = "*"
+mypy = "*"
 
 [packages]
 uvicorn = {extras = ["standard"],version = "*"}
