made src/ root become app/ and added routers instead of putting everything in main

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -55,4 +55,4 @@ jobs:
     
     - name: Static type checker with mypy
       run: |
-        pipenv run mypy --strict src/
+        pipenv run mypy --strict app/
