added test coverage to the cicd pipeline

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -56,3 +56,7 @@ jobs:
     - name: Static type checker with mypy
       run: |
         pipenv run mypy --strict app/
+
+    - name: Test Coverage
+      run: |
+        pipenv run pytest --cov-config=.coveragerc --cov .
